--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   "dependencies": {
     "@hapi/boom": "^10.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "faker": "^5.5.3",
     "joi": "^17.6.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.20.1",
     "xpress": "^2.4.6"
   }
 }
